@@ -1,3 +1,12 @@
+2008-05-23  Mats Cronqvist  <masse@kreditor.se>
+
+	* src/otp_doc.erl (handle_link): 
+	
+	added code for the case where you are looking for links and have
+	several hits, but one is exact. e.g., when searching for
+	gen_server:start/4, you probably want that and not
+	gen_server:start_link/4.
+	
 2008-05-13  Mats Cronqvist  <masse@kreditor.se>
 
 	* src/otp_doc.erl:
